version 2.1.2 (git tag v2.1.2rel)
================================
* use pytest-mpl for image comparison tests.
* change license to MIT.
* changes gribmessage.projparams['proj'] from 'cyl' to 'longlat'
  for non-projection projections (e.g. 'regular_ll'). Issue #167.

version 2.1.1 (git tag v2.1.1rel)
=================================
* clean up docs.
* migrate examples in 'test' directory from basemap to cartopy.
* enable github actions for CI (PR #159).

version 2.1 (git tag v2.1rel)
============================
* split ncepgrib2 module into a separate project
 (https://github.com/jswhit/ncepgrib2). pygrib now only uses
  eccodes. Docs converted to sphinx.

version 2.0.6 (git tag v2.0.6rel)
=================================
* restore python 2 compatability.
* distinguish between run and build time dependenices in setup.py (PR #112).
* Fix problem printing grib messages with NLDAS grib files (PR #141).

version 2.0.5 (git tag v2.0.5rel)
==================================
* fix error in latlons method for lambert projection and polar stereo when 
  jScansPositively == 0 (PR #129).
* Add README.md as long description for pypi (PR #130).

version 2.0.4 (git tag v2.0.4rel)
================================
* fix error in gaussian latitudes (issue #102)
* fix MemoryError when computing rotated lat/lons (issue #99)

version 2.0.3 (git tag v2.0.3rel)
=================================
* default lib name switched from grib_api to eccodes (can still
modify in setup.cfg).
* fix for latlons method for mercator domains that cross Greenwich 
(issue #67).

version 2.0.2 (git tag v2.0.2rel)
================================
* add .travis.yml for automatically running test.py using travis CI.
* make sure ftime cannot be None (to avoid crash in grib_list).
* update g2clib_src to version 1.6.0 from NCEP.
* use forecastTime if available to define validDate - otherwise
  fall back on end of stepRange (issue #40).
* comment out reference to private jasper variable (inmem_) in 