@@ -4,6 +4,8 @@ version 2.1.2 (git tag v2.1.2rel)
 * change license to MIT.
 * changes gribmessage.projparams['proj'] from 'cyl' to 'longlat'
   for non-projection projections (e.g. 'regular_ll'). Issue #167.
+* include eccodes definitions inside package, add set_datadir pygrib.open
+  method to reset path.
 
 version 2.1.1 (git tag v2.1.1rel)
 =================================
